src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductList__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>제품 리스트</description>
        <inlineHelpText>제품 리스트</inlineHelpText>
        <label>제품 리스트</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>민원관리</relationshipLabel>
        <relationshipName>CaseProductList</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1040</fullName>
                </value>
                <value>
                    <fullName>GC1060</fullName>
                </value>
                <value>
                    <fullName>GC3020</fullName>
                </value>
                <value>
                    <fullName>GC3040</fullName>
                </value>
                <value>
                    <fullName>GC3060</fullName>
                </value>
                <value>
                    <fullName>GC5020</fullName>
                </value>
                <value>
                    <fullName>GC5040</fullName>
                </value>
                <value>
                    <fullName>GC5060</fullName>
                </value>
                <value>
                    <fullName>GC1020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>acceptContents__c</fullName>
        <description>접수내용</description>
        <inlineHelpText>접수내용</inlineHelpText>
        <label>접수내용</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>acceptDate__c</fullName>
        <description>접수 일시</description>
        <inlineHelpText>접수 일시</inlineHelpText>
        <label>접수 일시</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>acceptUserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>접수자</description>
        <label>접수자</label>
        <referenceTo>User</referenceTo>
        <relationshipName>case_accept_user</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>authDate__c</fullName>
        <description>결재 일시</description>
        <inlineHelpText>결재 일시</inlineHelpText>
        <label>결재 일시</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>authUserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>결재자</description>
        <label>결재자</label>
        <referenceTo>User</referenceTo>
        <relationshipName>case_auth_user</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>closedDate__c</fullName>
        <description>종료 일시</description>
        <inlineHelpText>종료 일시</inlineHelpText>
        <label>종료 일시</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>createdDate__c</fullName>
        <description>등록 일시</description>
        <inlineHelpText>등록 일시</inlineHelpText>
        <label>등록 일시</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>oppositContents__c</fullName>
        <description>반려내용</description>
        <inlineHelpText>반려내용</inlineHelpText>
        <label>반려내용</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>responseContents__c</fullName>
        <description>처리내용</description>
        <inlineHelpText>처리내용</inlineHelpText>
        <label>처리내용</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>responseDate__c</fullName>
        <description>처리 일시</description>
        <inlineHelpText>처리 일시</inlineHelpText>
        <label>처리 일시</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>responseUserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>처리자</description>
        <label>처리자</label>
        <referenceTo>User</referenceTo>
        <relationshipName>case_response_user</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>모든 진행 중인 민원관리</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>my</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>처리 대기</value>
        </filters>
        <label>민원 처리대기</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>